--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -1,10 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh" xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>物联网中心*温度湿度传感器</title>
+    <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/vue/2.5.10/vue.min.js"></script>
+    <script>
+        window.onload=function(){
+            const URL_IOT_FIND = "/iot/find";
+            const URL_IOT_COUNT = "/iot/count";
+
+            let app = new Vue({
+                el:'#box',
+                data:{
+                    iot_count : 0 ,
+                    current_time : new Date(),
+                    items : [
+                        {
+                            publish_time: 0,
+                            temperature:0,
+                            humidity:0
+                        }
+                    ]
+                },
+                methods:{
+                    add:function(){
+                        fetchData.bind(this);
+                        fetchData().catch( e =>
+                            console.error(e)
+                        );
+                    }
+                },
+
+                created: function () {
+                    fetchData.call(this).catch( e =>
+                        console.error(e)
+                    );
+                }
+            });
+
+            async function fetchData() {
+                try {
+                    // 注意这里的await语句，其所在的b函数必须有async关键字声明
+                    let response = await fetch(URL_IOT_FIND);
+                    let responseJson =  await response.json();
+                    this.items = [];
+                    responseJson.data.forEach(
+                      item =>  {
+                          this.items.push({
+                              publish_time : new Date(item.publish_time).toLocaleString(),
+                              temperature : item.temperature,
+                              humidity : item.humidity
+                          })
+                      }
+                    );
+
+                    this.current_time = new Date();
+
+                    this.iot_count = await fetch(URL_IOT_COUNT);
+
+                } catch(error) {
+                    console.error(error);
+                }
+            }
+
+            let timer = setInterval(function () {
+                  fetchData.call(app);
+            },20000);
+        }
+    </script>
 </head>
 <body>
-    <h1>in1ggdggdex</h1>
+    <div class="container" id="box">
+        <div class="page-header">
+            <h1>物联网中心
+                <small>数据监测</small>
+            </h1>
+        </div>
+        <p>通过树莓派结点获取温湿度数据,使用mqtt协议发送到基于事件驱动和异步的服务端</p>
+
+        <br/>
+
+        <table class="table table-bordered table-hover">
+            <caption class="h3 text-info">温湿度数据</caption>
+            <p> {{current_time.toLocaleString()}} 共有 {{iot_count}} 条数据<p>
+            <tr class="text-danger">
+                <th class="text-center">记录时间</th>
+                <th class="text-center">温度</th>
+                <th class="text-center">湿度</th>
+
+            </tr>
+            <tr class="text-center" id="data-list" v-for="item in items"  >
+                <td>{{item.publish_time}}</td>
+                <td>{{item.temperature}}</td>
+                <td>{{item.humidity}}</td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
